--- a/static/index.css
+++ b/static/index.css
@@ -20,6 +20,10 @@ html {
 	font-family: var(--olin-fonts);
 }
 
+h1.display-4 {
+	font-weight: bold;
+}
+
 .navbar-brand {
 	font-size: 1.5em;
 	font-weight: bold;
@@ -36,4 +40,11 @@ html {
 
 .jumbotron > * {
 	text-align: center;
+}
+
+.jumbotron > form {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 500px;
+	text-align: unset;
 }
