--- a/static/index.css
+++ b/static/index.css
@@ -42,7 +42,7 @@ h1.display-4 {
 	text-align: center;
 }
 
-.jumbotron > form {
+.jumbotron > .form-container {
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 500px;
