--- a/views/index.html
+++ b/views/index.html
@@ -1,311 +1,257 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+{% extends "./_template.html" %}
 
-		<title>Olin.link</title>
+<!-- Shortening Form -->
+{% block main_section %}
+<div class="jumbotron">
+	<h1 class="display-4"><span class="olin-wordmark">Olin</span>.link</h1>
+	<p class="lead">A URL Shortener for the Olin Community</p>
 
-		<!-- Bootstrap CSS -->
-		<!-- TODO: Make this local and inlined -->
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-			integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-			crossorigin="anonymous"
-		/>
+	<div class="form-container">
+		{% if flash %}
+		<div class="alert alert-{{ flashType }}" role="alert">{{ flash }}</div>
+		{% endif %}
 
-		<link rel="stylesheet" href="index.css" />
-
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
-	</head>
-	<body>
-		<section id="main">
-			<!-- Hack to get a non-responsive bootstrap navbar (it only has one button, so responsiveness
-			doesn't make a difference, so KISS): https://stackoverflow.com/a/18292828 -->
-			<nav class="navbar navbar-light">
-				<div class="navbar-header pull-left">
-					<a class="navbar-brand" href="#"
-						><span class="olin-wordmark">Olin</span>.link</a
-					>
-				</div>
-				<div class="navbar-header pull-right">
-					<ul class="nav navbar-nav">
-						<li class="nav-item"><a href="#faq" class="nav-link">FAQ</a></li>
-					</ul>
-				</div>
-			</nav>
-
-			<div class="jumbotron">
-				<h1 class="display-4"><span class="olin-wordmark">Olin</span>.link</h1>
-				<p class="lead">A URL Shortener for the Olin Community</p>
-
-				<div class="form-container">
-					{% if flash %}
-					<div class="alert alert-{{ flashType }}" role="alert">{{ flash }}</div>
-					{% endif %}
-
-					<form action="/api/form-create" method="POST">
-						<div class="form-group">
-							<label for="long-url">Long URL</label>
-							<input
-								type="url"
-								class="form-control"
-								name="url"
-								id="long-url"
-								placeholder="https://www.google.com/search?q=how+to+feed+a+pheonix"
-								value="{{ url }}"
-								required
-							/>
-						</div>
-						<div class="form-group">
-							<label for="short-url">Short URL</label>
-							<div class="input-group">
-								<div class="input-group-prepend">
-									<span
-										class="input-group-text"
-										id="olin-link-input-group-prefix"
-									>
-										<b><span class="olin-wordmark">Olin</span>.link</b>/
-									</span>
-								</div>
-								<input
-									aria-describedby="olin-link-input-group-prefix"
-									class="form-control"
-									id="short-url"
-									name="id"
-									placeholder="FeedFrank"
-									pattern="^[a-zA-Z0-9_\-\.]{5,20}$"
-									minlength="5"
-									maxlength="20"
-									value="{{ id }}"
-								/>
-							</div>
-							<small class="form-text text-muted">
-								Leave blank for a randomly-generated short URL. Case-insensitive.
-							</small>
-						</div>
-						<div class="form-group">
-							<label for="email">Email</label>
-							<input
-								type="email"
-								class="form-control"
-								name="email"
-								id="email"
-								pattern="^[a-zA-Z0-9\.]+@(students\.|alumni\.|faculty\.|staff\.|)olin\.edu$"
-								placeholder="fpheonix@olin.edu"
-								title="Please enter your @olin.edu email address."
-								value="{{ email }}"
-								required
-							/>
-							<small class="form-text text-muted">
-								Your email will not be made public.
-							</small>
-						</div>
-						<div class="form-group float-right">
-							<button class="btn btn-primary" type="submit">Go!</button>
-						</div>
-					</form>
-				</div>
+		<form action="/api/form-create" method="POST">
+			<div class="form-group">
+				<label for="long-url">Long URL</label>
+				<input
+					type="url"
+					class="form-control"
+					name="url"
+					id="long-url"
+					placeholder="https://www.google.com/search?q=how+to+feed+a+pheonix"
+					value="{{ url }}"
+					required
+				/>
 			</div>
-		</section>
+			<div class="form-group">
+				<label for="short-url">Short URL</label>
+				<div class="input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text" id="olin-link-input-group-prefix">
+							<b><span class="olin-wordmark">Olin</span>.link</b>/
+						</span>
+					</div>
+					<input
+						aria-describedby="olin-link-input-group-prefix"
+						class="form-control"
+						id="short-url"
+						name="id"
+						placeholder="FeedFrank"
+						pattern="^[a-zA-Z0-9_\-\.]{5,20}$"
+						minlength="5"
+						maxlength="20"
+						value="{{ id }}"
+					/>
+				</div>
+				<small class="form-text text-muted">
+					Leave blank for a randomly-generated short URL. Case-insensitive.
+				</small>
+			</div>
+			<div class="form-group">
+				<label for="email">Email</label>
+				<input
+					type="email"
+					class="form-control"
+					name="email"
+					id="email"
+					pattern="^[a-zA-Z0-9\.]+@(students\.|alumni\.|faculty\.|staff\.|)olin\.edu$"
+					placeholder="fpheonix@olin.edu"
+					title="Please enter your @olin.edu email address."
+					value="{{ email }}"
+					required
+				/>
+				<small class="form-text text-muted"> Your email will not be made public. </small>
+			</div>
+			<div class="form-group float-right">
+				<button class="btn btn-primary" type="submit">Go!</button>
+			</div>
+		</form>
+	</div>
+</div>
+{% endblock %}
 
-		<section id="faqs">
-			<h1><a name="faq">Frequently Asked Questions</a></h1>
-			<div class="faq-questions">
-				<div class="faq-question-section">
-					<h3 class="faq-question">Q: What is Olin.link?</h3>
-					<div class="faq-answer">
-						A: Olin.link is a URL shortener, much like bit.ly, is.gd, or tinyurl.com. It
-						takes a long URL:
+<!-- FAQ Section -->
 
-						<pre>
+{% block additional_content %}
+<section id="faqs">
+	<h1><a name="faq">Frequently Asked Questions</a></h1>
+	<div class="faq-questions">
+		<div class="faq-question-section">
+			<h3 class="faq-question">Q: What is Olin.link?</h3>
+			<div class="faq-answer">
+				A: Olin.link is a URL shortener, much like bit.ly, is.gd, or tinyurl.com. It takes a
+				long URL:
+
+				<pre>
 https://docs.google.com/document/d/1WLh6RhVyW42e4iyw8OjJp_uu9bLQHZtzrr2XKscvndU/edit</pre
-						>
+				>
 
-						and turns it into a short one:
+				and turns it into a short one:
 
-						<pre>https://olin.link/VeryImportantDocument</pre>
+				<pre>https://olin.link/VeryImportantDocument</pre>
 
-						As opposed to the long url, the short one is:
-						<ul>
-							<li>Shorter</li>
-							<li>Easier to remember</li>
-							<li>Easier to say out loud</li>
-							<li>
-								Easier to print out and type back in (for example, if you put it on
-								a poster)
-							</li>
-							<li>Cooler</li>
-						</ul>
-					</div>
-				</div>
-				<div class="faq-question-section">
-					<h3 class="faq-question">
-						Q: Why should I use Olin.link instead of bit.ly/is.gd/tinyurl.com?
-					</h3>
-					<div class="faq-answer">
-						Because it's better! Those tools all have several limitations that Olin.link
-						does not:
-
-						<ul>
-							<li>
-								<b>It's often hard to get a good shortlink</b>, leaving you with
-								something like <code>bit.ly/OlinShopWorkOrder2</code>. Because
-								Olin.link is only used by the Olin community, these sorts of naming
-								conflicts are much less likely.
-							</li>
-							<li>
-								When you do get a good shortlink (like
-								<code>tinyurl.com/menu</code>),
-								<b
-									>you're polluting the global address pool and preventing anybody
-									else from using that shortlink ever again.</b
-								>
-								With Olin.link, that's much less likely to be an issue because, for
-								example, Olin only has one dining hall that only has one menu.
-							</li>
-							<li>
-								<b
-									>Olin.link shortlinks can be updated to point to a different
-									long URL later on,</b
-								>
-								even if the original owner has left the community—so
-								<code>olin.link/menu</code> can live on forever as the link to the
-								current dining hall menu, even if the full URL changes.
-							</li>
-							<li>
-								<b
-									><code>tinyurl.com/whatever</code> is boring.
-									<code>Olin.link/whatever</code> is cool, unique, and
-									interesting.</b
-								>
-							</li>
-							<li>
-								<b
-									>By using other URL shortening services, you're exposing the
-									community to privacy risks</b
-								>
-								by forcing every request for a resource to go through a 3rd party
-								with unknown data protection protocols. Olin.link is less risky
-								because it's run by your fellow Oliners—who you hopefully trust a
-								bit more than some random strangers on the internet—and because of
-								our very strict privacy policy, which is listed below.
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="faq-question-section">
-					<h3 class="faq-question">
-						Q: What can I use Olin.link for? Are there any limitations? Does it cost
-						money?
-					</h3>
-					<div class="faq-answer">
-						A: You're welcome to use olin.link for anything you'd like, and it's free!
-						As always, please remember the Honor Code and to Be A Good Person.&trade;
-						<br />
-						<b>Caveat:</b> Olin.link is provided on a best-effort basis. While it's fine
-						to share a shortlink publicly, if it goes viral and Olin.link starts getting
-						hit hundreds of times per second, it might stop working.
-					</div>
-				</div>
-				<div class="faq-question-section">
-					<h3 class="faq-question">Q: Who's behind Olin.link?</h3>
-					<div class="faq-answer">
-						Olin.link was built and is maintained by
-						<a
-							href="mailto:aporad@olin.edu?subject=Olin.link%20Question"
-							alt="Email Ari"
-							>Ari Porad</a
-						>, a member of the Olin Class of 2024, because he got sick of stupid
-						TinyURLs.
-					</div>
-				</div>
-				<div class="faq-question-section">
-					<h3 class="faq-question">
-						Q: Is Olin.link open-source? Can I contribute to it?
-					</h3>
-					<div class="faq-answer">
-						Yes! Olin.link's code can be found
-						<a href="https://github.com/ariporad/olin.link" alt="Olin.link Github Repo"
-							>on GitHub</a
-						>, and contributions are welcome! Feel free to reach out to Ari for help if
-						you're looking for a place to start.
-					</div>
-				</div>
-				<div class="faq-question-section">
-					<h3 class="faq-question">Q: What's Olin.link's Privacy Policy?</h3>
-					<div class="faq-answer">
-						Privacy is a fundemental human right, and Olin.link tries hard to respect
-						your privacy.
-
-						<h4>When you create a shortlink, we collect and store:</h4>
-						<ul>
-							<li>The long URL that your shortlink points to</li>
-							<li>
-								The short URL that you've requested, or a randomly-generated default
-							</li>
-							<li>Your IP address, for fraud prevention</li>
-							<li>
-								Your Olin email address, for fraud prevention, so we can reach out
-								if there's an issue with your shortlink, and so we can know who's
-								allowed to edit a shortlink.
-							</li>
-							<li>The time</li>
-						</ul>
-
-						<h4>When somebody clicks on a shortlink, we collect and store:</h4>
-						<ul>
-							<li>The shortlink they requested</li>
-							<li>
-								Their IP address, in anonymized form. Specifically, if they're
-								on-campus or connecting from the Olin network, we store that.
-								Otherwise, we store their IP address with the last octet zeroed out
-								(for example,
-								<code>12.34.56.78</code> is stored in anonymized form as
-								<code>12.34.56.0</code>).
-							</li>
-							<li>The time</li>
-						</ul>
-
-						<h4>Here's how we use that information:</h4>
-						<ul>
-							<li>
-								We use this information for the obvious purpose of matching
-								shortlinks to long URLs
-							</li>
-							<li>
-								We use that information to allow you to change the long URL that
-								your shortlink points to
-							</li>
-							<li>
-								We may use that information to combat fraud, improve the service,
-								and generally understand how people are using Olin.link
-							</li>
-							<li>
-								We may use your email to contact you if we have concerns about one
-								of your shortlinks or if there's another issue
-							</li>
-							<li>
-								We may provide any of this information to the Olin administration,
-								StAR, the Honor Board, or another entity if we have a legitimite
-								reason to believe that it's in the interests of the community
-							</li>
-							<li>
-								If we receive a valid legal order from a law enforcement authority
-								with relevant jurisdiction, we'll be forced to turn over any of the
-								data we've collected
-							</li>
-						</ul>
-					</div>
-				</div>
+				As opposed to the long url, the short one is:
+				<ul>
+					<li>Shorter</li>
+					<li>Easier to remember</li>
+					<li>Easier to say out loud</li>
+					<li>
+						Easier to print out and type back in (for example, if you put it on a
+						poster)
+					</li>
+					<li>Cooler</li>
+				</ul>
 			</div>
-		</section>
-	</body>
-</html>
+		</div>
+		<div class="faq-question-section">
+			<h3 class="faq-question">
+				Q: Why should I use Olin.link instead of bit.ly/is.gd/tinyurl.com?
+			</h3>
+			<div class="faq-answer">
+				Because it's better! Those tools all have several limitations that Olin.link does
+				not:
+
+				<ul>
+					<li>
+						<b>It's often hard to get a good shortlink</b>, leaving you with something
+						like <code>bit.ly/OlinShopWorkOrder2</code>. Because Olin.link is only used
+						by the Olin community, these sorts of naming conflicts are much less likely.
+					</li>
+					<li>
+						When you do get a good shortlink (like
+						<code>tinyurl.com/menu</code>),
+						<b
+							>you're polluting the global address pool and preventing anybody else
+							from using that shortlink ever again.</b
+						>
+						With Olin.link, that's much less likely to be an issue because, for example,
+						Olin only has one dining hall that only has one menu.
+					</li>
+					<li>
+						<b
+							>Olin.link shortlinks can be updated to point to a different long URL
+							later on,</b
+						>
+						even if the original owner has left the community—so
+						<code>olin.link/menu</code> can live on forever as the link to the current
+						dining hall menu, even if the full URL changes.
+					</li>
+					<li>
+						<b
+							><code>tinyurl.com/whatever</code> is boring.
+							<code>Olin.link/whatever</code> is cool, unique, and interesting.</b
+						>
+					</li>
+					<li>
+						<b
+							>By using other URL shortening services, you're exposing the community
+							to privacy risks</b
+						>
+						by forcing every request for a resource to go through a 3rd party with
+						unknown data protection protocols. Olin.link is less risky because it's run
+						by your fellow Oliners—who you hopefully trust a bit more than some random
+						strangers on the internet—and because of our very strict privacy policy,
+						which is listed below.
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="faq-question-section">
+			<h3 class="faq-question">
+				Q: What can I use Olin.link for? Are there any limitations? Does it cost money?
+			</h3>
+			<div class="faq-answer">
+				A: You're welcome to use olin.link for anything you'd like, and it's free! As
+				always, please remember the Honor Code and to Be A Good Person.&trade;
+				<br />
+				<b>Caveat:</b> Olin.link is provided on a best-effort basis. While it's fine to
+				share a shortlink publicly, if it goes viral and Olin.link starts getting hit
+				hundreds of times per second, it might stop working.
+			</div>
+		</div>
+		<div class="faq-question-section">
+			<h3 class="faq-question">Q: Who's behind Olin.link?</h3>
+			<div class="faq-answer">
+				Olin.link was built and is maintained by
+				<a href="mailto:aporad@olin.edu?subject=Olin.link%20Question" alt="Email Ari"
+					>Ari Porad</a
+				>, a member of the Olin Class of 2024, because he got sick of stupid TinyURLs.
+			</div>
+		</div>
+		<div class="faq-question-section">
+			<h3 class="faq-question">Q: Is Olin.link open-source? Can I contribute to it?</h3>
+			<div class="faq-answer">
+				Yes! Olin.link's code can be found
+				<a href="https://github.com/ariporad/olin.link" alt="Olin.link Github Repo"
+					>on GitHub</a
+				>, and contributions are welcome! Feel free to reach out to Ari for help if you're
+				looking for a place to start.
+			</div>
+		</div>
+		<div class="faq-question-section">
+			<h3 class="faq-question">Q: What's Olin.link's Privacy Policy?</h3>
+			<div class="faq-answer">
+				Privacy is a fundemental human right, and Olin.link tries hard to respect your
+				privacy.
+
+				<h4>When you create a shortlink, we collect and store:</h4>
+				<ul>
+					<li>The long URL that your shortlink points to</li>
+					<li>The short URL that you've requested, or a randomly-generated default</li>
+					<li>Your IP address, for fraud prevention</li>
+					<li>
+						Your Olin email address, for fraud prevention, so we can reach out if
+						there's an issue with your shortlink, and so we can know who's allowed to
+						edit a shortlink.
+					</li>
+					<li>The time</li>
+				</ul>
+
+				<h4>When somebody clicks on a shortlink, we collect and store:</h4>
+				<ul>
+					<li>The shortlink they requested</li>
+					<li>
+						Their IP address, in anonymized form. Specifically, if they're on-campus or
+						connecting from the Olin network, we store that. Otherwise, we store their
+						IP address with the last octet zeroed out (for example,
+						<code>12.34.56.78</code> is stored in anonymized form as
+						<code>12.34.56.0</code>).
+					</li>
+					<li>The time</li>
+				</ul>
+
+				<h4>Here's how we use that information:</h4>
+				<ul>
+					<li>
+						We use this information for the obvious purpose of matching shortlinks to
+						long URLs
+					</li>
+					<li>
+						We use that information to allow you to change the long URL that your
+						shortlink points to
+					</li>
+					<li>
+						We may use that information to combat fraud, improve the service, and
+						generally understand how people are using Olin.link
+					</li>
+					<li>
+						We may use your email to contact you if we have concerns about one of your
+						shortlinks or if there's another issue
+					</li>
+					<li>
+						We may provide any of this information to the Olin administration, StAR, the
+						Honor Board, or another entity if we have a legitimite reason to believe
+						that it's in the interests of the community
+					</li>
+					<li>
+						If we receive a valid legal order from a law enforcement authority with
+						relevant jurisdiction, we'll be forced to turn over any of the data we've
+						collected
+					</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</section>
+{% endblock %}
