--- a/views/success.html
+++ b/views/success.html
@@ -1,55 +1,51 @@
-{% extends "./_template.html" %}
+{% extends "./_extended_template.html" %}
 
 <!-- Shortening Form -->
-{% block main_section %}
-<div class="jumbotron">
-	<h1 class="display-4 success-url-container">
-		<div class="success-shortlink">
-			<span class="olin-wordmark">Olin</span>.link/<span style="display: inline-block"
-				>{{ id }}</span
-			>
-		</div>
-		<svg
-			width="1em"
-			height="1em"
-			viewBox="0 0 16 16"
-			class="bi bi-arrow-down success-arrow"
-			fill="currentColor"
-			xmlns="http://www.w3.org/2000/svg"
+{% block title_content %}
+<div class="success-url-container">
+	<div class="success-shortlink">
+		<span class="olin-wordmark">olin</span>.link/<span style="display: inline-block"
+			>{{ id }}</span
 		>
-			<path
-				fill-rule="evenodd"
-				d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"
-			/>
-		</svg>
-		<div class="success-url">{{ url }}</div>
-	</h1>
-
-	<div class="form-container">
-		{% if flash %}
-		<div class="alert alert-{{ flashType }}" role="alert">{{ flash }}</div>
-		{% endif %}
-
-		<img src="qrcode.svg" alt="QR Code" />
-		<a
-			href="qrcode.svg"
-			alt="Download QR Code as SVG"
-			class="btn btn-primary"
-			download="OlinLink-{{ id }}.svg"
-			>Download SVG</a
-		>
-		<a
-			href="qrcode.png"
-			alt="Download QR Code as PNG"
-			class="btn btn-primary"
-			download="OlinLink-{{ id }}.png"
-			>Download PNG</a
-		>
-
-		<button class="btn btn-primary" id="copy-qr" hidden disabled>Copy</button>
 	</div>
+	<svg
+		width="1em"
+		height="1em"
+		viewBox="0 0 16 16"
+		class="bi bi-arrow-down success-arrow"
+		fill="currentColor"
+		xmlns="http://www.w3.org/2000/svg"
+	>
+		<path
+			fill-rule="evenodd"
+			d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"
+		/>
+	</svg>
+	<div class="success-url">{{ url }}</div>
 </div>
+{% endblock %} {% block main_content %}
+<!---
+	- src="qrcode.svg" is parsed as a relative URL (ie. since this page is:
+	- `olin.link/mylink/success, it resolves to `olin.link/mylink/qrcode.svg`). 
+	-->
+<img src="qrcode.svg" alt="QR Code" />
+<a
+	href="qrcode.svg"
+	alt="Download QR Code as SVG"
+	class="btn btn-primary"
+	download="OlinLink-{{ id }}.svg"
+	>Download SVG</a
+>
+<a
+	href="qrcode.png"
+	alt="Download QR Code as PNG"
+	class="btn btn-primary"
+	download="OlinLink-{{ id }}.png"
+	>Download PNG</a
+>
 
+<button class="btn btn-primary" id="copy-qr" hidden disabled>Copy</button>
+{% endblock %} {% block additional_content %}
 <script>
 	if (
 		navigator.clipboard &&
