--- a/static/index.css
+++ b/static/index.css
@@ -20,7 +20,7 @@ html {
 	font-family: var(--olin-fonts);
 }
 
-h1.display-4 {
+body:not(.notfound) .main-title {
 	font-weight: bold;
 }
 
@@ -34,11 +34,12 @@ h1.display-4 {
 	color: var(--olin-blue);
 }
 
-.jumbotron {
+.main-container {
 	background: none;
+	flex-grow: 1;
 }
 
-.jumbotron > * {
+.main-container > * {
 	text-align: center;
 }
 
@@ -47,6 +48,21 @@ h1.display-4 {
 	margin-right: auto;
 	max-width: 500px;
 	text-align: unset;
+}
+
+.notfound-shortlink {
+	font-weight: bold;
+	display: block;
+}
+
+.notfound-button-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: 1.1em;
+
+	margin-top: 2.5em;
 }
 
 .success-url-container {
@@ -59,7 +75,7 @@ h1.display-4 {
 	max-width: 100%;
 }
 
-.success-url-container > .success-url {
+.url-wrap {
 	max-width: 100%;
 	white-space: nowrap;
 	overflow-x: auto;
@@ -73,6 +89,8 @@ h1.display-4 {
 section#main {
 	min-height: 100vh;
 	padding-bottom: 10rem;
+	display: flex;
+	flex-direction: column;
 }
 
 .faq-questions {
