--- a/views/_basic_template.html
+++ b/views/_basic_template.html
@@ -25,7 +25,7 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 	</head>
-	<body>
+	<body class="{{ name }}">
 		<section id="main">
 			<!-- Hack to get a non-responsive bootstrap navbar (it only has one button, so responsiveness
 			doesn't make a difference, so KISS): https://stackoverflow.com/a/18292828 -->
@@ -37,7 +37,7 @@
 				</div>
 				<div class="navbar-header pull-right">
 					<ul class="nav navbar-nav">
-						<li class="nav-item"><a href="#faq" class="nav-link">FAQ</a></li>
+						<li class="nav-item"><a href="/#faq" class="nav-link">FAQ</a></li>
 					</ul>
 				</div>
 			</nav>
