--- a/views/_extended_template.html
+++ b/views/_extended_template.html
@@ -2,8 +2,8 @@
 
 <!-- Shortening Form -->
 {% block main_section %}
-<div class="jumbotron">
-	<h1 class="display-4">{% block title_content %}{% endblock %}</h1>
+<div class="jumbotron main-container">
+	<h1 class="display-4 main-title">{% block title_content %}{% endblock %}</h1>
 	<p class="lead">{% block subtitle_content %}{% endblock %}</p>
 
 	<div class="form-container">
