--- a/views/_basic_template.html
+++ b/views/_basic_template.html
@@ -27,18 +27,14 @@
 	</head>
 	<body class="{{ name }}">
 		<section id="main">
-			<!-- Hack to get a non-responsive bootstrap navbar (it only has one button, so responsiveness
-			doesn't make a difference, so KISS): https://stackoverflow.com/a/18292828 -->
-			<nav class="navbar navbar-light">
-				<div class="navbar-header pull-left">
-					<a class="navbar-brand" href="#"
-						><span class="olin-wordmark">Olin</span>.link</a
-					>
-				</div>
-				<div class="navbar-header pull-right">
-					<ul class="nav navbar-nav">
-						<li class="nav-item"><a href="/#faq" class="nav-link">FAQ</a></li>
-					</ul>
+			<nav class="navbar navbar-expand navbar-light">
+				<a class="navbar-brand" href="/"><span class="olin-wordmark">Olin</span>.link</a>
+
+				<div class="navbar-nav ml-auto">
+					<a class="nav-item nav-link" href="/#faq">FAQ</a>
+					{% if name != "index" %}
+					<a class="nav-item btn btn-outline-success" href="/">New</a>
+					{% endif %}
 				</div>
 			</nav>
 
