--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 {% set name = "index" %} {% extends "./_extended_template.html" %} {% block title_content %}
 <span class="olin-wordmark">Olin</span>.link {% endblock %} {% block subtitle_content %} A URL
 Shortener for the Olin Community {% endblock %} {% block main_content %}
-<form action="/api/form-create" method="POST">
+<form action="/_/form-create" method="POST">
 	<div class="form-group">
 		<label for="long-url">Long URL</label>
 		<input
