--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,19 @@
-{% set name = "index" %} {% extends "./_extended_template.html" %} {% block title_content %}
-<span class="olin-wordmark">Olin</span>.link {% endblock %} {% block subtitle_content %} A URL
-Shortener for the Olin Community {% endblock %} {% block main_content %}
+{% set name = "index" %} {% extends "./_extended_template.html" %}
+
+<!-- Remove the "New" button from the navbar -->
+{% block navbar_right %}
+<a class="nav-item nav-link" href="/#faq">FAQ</a>
+{% endblock %}
+
+<!-- Title -->
+{% block title_content %}
+<span class="olin-wordmark">Olin</span>.link{% endblock %}
+
+<!-- Subtitle -->
+{% block subtitle_content %}A URL Shortener for the Olin Community{% endblock %}
+
+<!-- Main Content -->
+{% block main_content %}
 <form action="/_/form-create" method="POST">
 	<div class="form-group">
 		<label for="long-url">Long URL</label>
@@ -60,7 +73,6 @@ Shortener for the Olin Community {% endblock %} {% block main_content %}
 {% endblock %}
 
 <!-- FAQ Section -->
-
 {% block additional_content %}
 <section id="faqs">
 	<h1><a name="faq">Frequently Asked Questions</a></h1>
