feat: add ability to resend confirmation email

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -82,6 +82,11 @@
 					>
 						Edit
 					</button>
+					<a
+						href="/_/admin/{{ shortlink.id }}/resend-confirmation"
+						class="btn btn-info no-edit"
+						>Resend Confirm
+					</a>
 					<button
 						class="btn btn-outline-danger editable"
 						onclick="event.preventDefault(); this.parentElement.parentElement.classList.remove('editing');"
